@@ -10,6 +10,8 @@ Lib/
   This allows sub-classes of LDIFWriter to implement determining whether
   attribute values have to be base64-encoded in a different manner and is
   the same approach like in class dsml.DSMLWriter.
+* LDAPUrlExtension._parse() now gracefully handles LDAP URL extensions
+  without explicit exvalue as being set with implicit value None.
 
 Modules/
 * New LDAP option constant ldap.OPT_X_SASL_NOCANON supported
